--- a/webapp/src/components/screen/UserProfileScreen/index.module.scss
+++ b/webapp/src/components/screen/UserProfileScreen/index.module.scss
@@ -45,9 +45,16 @@
   display: flex;
   height: 100%;
   margin-top: 0;
+  overflow: hidden;
 
   @media (max-width: 769px) {
     flex-direction: column;
+  }
+
+  @media (min-width: 769px) {
+    & > *:last-child {
+      padding-left: 404px;
+    }
   }
 }
 
@@ -56,11 +63,17 @@
   padding-top: 1em;
 
   @media (min-width: 769px) {
-    overflow-y: scroll;
+    position: fixed;
+    overflow-y: auto;
     width: 400px;
+    min-width: 400px;
     background-color: black;
     border-right: solid 4px #440473;
     height: 100%;
+
+    & > * {
+      width: 400px;
+    }
   }
 }
 
